--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -13,6 +13,16 @@ $modularscale:(
   );
 
 
+
+
+
+
+$ms-0-6:                      .639em;
+$ms-0-7:                      .75em;
+$ms-0-8:                      .78em;
+$ms-0-9:                      .851em;
+$ms-0:                        ms(0);
+$ms-_15:                      ms(.15);
 $ms-_25:                      ms(.25);
 $ms-_5:                       ms(.5);
 $ms-_75:                      ms(.75);
@@ -27,10 +37,13 @@ $ms-6:                        ms(6);
 $ms-7:                        ms(7);
 $ms-8:                        ms(8);
 $ms-9:                        ms(9);
+$ms-9_5:                      ms(9.5);
 $ms-10:                       ms(10);
 $ms-11:                       ms(11);
 $ms-12:                       ms(12);
+$ms-12_5:                     ms(12.5);
 $ms-13:                       ms(13);
+$ms-13_5:                       ms(13.5);
 $ms-14:                       ms(14);
 $ms-15:                       ms(15);
 $ms-16:                       ms(16);
@@ -106,7 +119,9 @@ $width-5:                     $ms-9;
 $width-6:                     $ms-10;
 $width-7:                     $ms-11;
 $width-8:                     $ms-12;
+$width-8_5:                   $ms-12_5;
 $width-9:                     $ms-13;
+$width-9_5:                   $ms-13_5;
 $width-10:                    $ms-14;
 $width-11:                    $ms-15;
 $width-12:                    $ms-16;
