content and style updates to about me page

--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -36,6 +36,7 @@ $ms-5:                        ms(5);
 $ms-6:                        ms(6);
 $ms-7:                        ms(7);
 $ms-8:                        ms(8);
+$ms-8_5:                        ms(8.5);
 $ms-9:                        ms(9);
 $ms-9_5:                      ms(9.5);
 $ms-10:                       ms(10);
@@ -146,8 +147,11 @@ $width-12:                    $ms-16;
 }
 
 $rvr-_25: rvr(0);
+$rvr-_05: rvr(.05);
+$rvr-_15: rvr(.15);
 $rvr-_25: rvr(.25);
 $rvr-_5:  rvr(.5);
+$rvr-_6:  rvr(.6);
 $rvr-_75: rvr(.75);
 $rvr-1:   rvr(1);
 $rvr-1_5: rvr(1.5);
@@ -168,8 +172,11 @@ $rvr-8:   rvr(8);
 }
 
 $vr-0:	  vr(0);
+$vr-_05:  vr(.05);
+$vr-_15:  vr(.15);
 $vr-_25:  vr(.25);
 $vr-_5:   vr(.5);
+$vr-_6:   vr(.6);
 $vr-_75:  vr(.75);
 $vr-1:    vr(1);
 $vr-1-5:  vr(1.5);
