--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -378,9 +378,31 @@ margin-bottom: vr(2);
 
 
 
-#catscontainer{
-padding-top: ms(5);
+.maincontainer{
+    perspective: 1px;
+    transform-style: preserve-3d;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
+
+
+.parallaxcontainer{
+padding-top: ms(5);
+display: flex;
+flex: 1 0 auto;
+position: relative;
+height: 100vh;
+transform: translateZ(-1px) scale(2);
+z-index: -1;
+}
+
+.contentcontainer{
+    position: relative;
+    display: block;
+    z-index: 1;
+}
+
 
 #catscontainer h2{
 @include v-3;
@@ -431,16 +453,16 @@ padding-top: ms(5);
 
 .vert{
 max-width: 100%;
-  
 }
 
-.caption-text{
+.caption-content{
 opacity: 0;
 position: absolute;
 width: 100%;
+height: 100%;
 color: #fff;
 left: 0;
-bottom: 0;
+top: 0;
 padding: $vr-_25;
 font-weight: 300;
 z-index: 2;
@@ -450,10 +472,35 @@ background-color: rgba(0,0,0,.7);
 -webkit-transition: opacity .3s ease-in-out;
 transition: opacity .3s ease-in-out;
 font-family: $font-family-sans-serif;
-font-size: $ms-0-8;
 }
 
-.catfig:hover .caption-text{
+.caption-copy{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    margin: 0 auto;
+    height: 100%;
+
+}
+
+.caption-title{
+margin-bottom: $vr-_25;
+font-size: $ms-0-9;
+font-weight: 400;
+text-transform: uppercase;
+}
+
+.caption-text{
+    font-size: $ms-0-6;
+    line-height: $vr-_75;
+    padding: 0 $ms-1_5;
+}
+
+
+
+.catfig:hover .caption-content{
 opacity: 1;
 }
 
@@ -489,7 +536,6 @@ opacity: 1;
 
 
 
-
 // 
 // brands panel
 // ==========================================================================
@@ -498,11 +544,11 @@ opacity: 1;
 // }
 
 .brandsblock{
-    align-items: stretch;
+    // align-items: stretch;
 }
 
 .brandsblock .style-svg{
-width: $ms-8;
+width: $ms-8_5;
 fill: #000;
 padding: 0 $ms-1_5 $vr-2 $ms-1_5;
 }
@@ -599,6 +645,14 @@ padding-top: ms(5);
     background-attachment: fixed;
 }
 
+.gel {
+    background-image: url('http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/gel2.jpg');
+    background-size: 22%;
+    background-repeat: no-repeat;
+    background-position: 90% 80%;
+    // background-attachment: fixed;
+}
+
 #gap{
     height: 25vh;
 }
@@ -645,7 +699,7 @@ padding-top: ms(5);
 }
 
 .hybridcopy{
-    max-width: ms(10);
+    max-width: ms(11);
     @include body-4;
     @include v-1;
     line-height: 1.2;
@@ -1076,7 +1130,7 @@ margin-bottom: $vr-2;
 
 .evo {
     opacity: 1;
-    background-image: url('http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/evolution.jpg');
+    background-image: url('http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/evolutionv2.jpg');
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: 97% 100%;
