--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -16,7 +16,11 @@ $modularscale:(
 
 
 
-
+$ms-0-1:                      .178em;
+$ms-0-2:                      .238em;
+$ms-0-3:                      .317em;
+$ms-0-4:                      .422em;
+$ms-0-5:                      .563em;
 $ms-0-6:                      .639em;
 $ms-0-7:                      .75em;
 $ms-0-8:                      .78em;
