--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -43,7 +43,10 @@ $ms-8:                        ms(8);
 $ms-8_5:                        ms(8.5);
 $ms-9:                        ms(9);
 $ms-9_5:                      ms(9.5);
+
 $ms-10:                       ms(10);
+$ms-10_5:                      ms(10.5);
+$ms-10_75:                      ms(10.75);
 $ms-11:                       ms(11);
 $ms-12:                       ms(12);
 $ms-12_5:                     ms(12.5);
